all doc comments and support for 451

--- a/LSL.VariableReplacer/LSL.VariableReplacer.csproj
+++ b/LSL.VariableReplacer/LSL.VariableReplacer.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup>
     <IsPackable>true</IsPackable>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
     <Version>1.0.1</Version>
     <PackageVersion>1.0.1</PackageVersion>
     <PackageTags></PackageTags>
