--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,34 @@
       "path": "${workspaceFolder}/docs"
     },
     {
-        "command": "dotnet serve -d _site",
-        "name": "Serve docs site",
-        "path": "${workspaceFolder}/docs"
-      }    
-  ]
+      "command": "dotnet serve -d _site",
+      "name": "Serve docs site",
+      "path": "${workspaceFolder}/docs"
+    }
+  ],
+  "yaml.schemas": {
+    "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
+  },
+  "my.snippets": {
+    "csharp": {
+      "Generate fiddle": {
+        "prefix": "fid",
+        "body": [
+          "using System;",
+          "using System.Collections.Generic;",
+          "using LSL.VariableReplacer;",
+          "using System.Text.RegularExpressions;",
+          "",
+          "public class Program",
+          "{",
+          "\tpublic static void Main()",
+          "\t{",
+          "\t\t$TM_SELECTED_TEXT",
+          "\t\tConsole.WriteLine(result);",
+          "\t}",
+          "}"
+        ]
+      }
+    }
+  }
 }
