use a play icon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: LSL.VariableReplacer
 site_url: https://alunacjones.github.io/LSL.VariableReplacer/
+extra_css:
+  - css/tryIt.css
 extra_javascript:
   - javascript/tryIt.js
 markdown_extensions:
