--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: LSL.VariableReplacer
 site_url: https://alunacjones.github.io/LSL.VariableReplacer/
+repo_url: https://github.com/alunacjones/LSL.VariableReplacer
 extra_css:
   - css/tryIt.css
 extra_javascript:
